src/static/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');

:root {
	--heading-font-stack: 'Roboto', sans-serif;
	--body-font-stack: 'Nunito', sans-serif;
}

body {
	font-family: var(--body-font-stack);
	font-size: 1rem;
	color: #222222;
	background-color: var(--light);
	padding-top: 50px;
}

h1, h2, h3, h4, h5, h6 {
	font-family: var(--heading-font-stack);
}

footer {
	background-color: #f8f9fa;
}

footer,
footer a {
	min-height: 424px;
	color: #7E7C97;
}

footer a:hover {
	text-decoration: none;
	color: #b1b0c0;
}

footer hr {
	border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(126, 124, 151, 0.3);
    margin-top: 55px;
}

footer p {
	margin: 0;
}

.content-block {
	min-height: 70vh;
	padding-bottom: 3rem;
}

.main-heading {
	font-weight: 400;
}

.sub-heading {
	font-weight: 300;
	margin-bottom: 2rem;
}

.padding-bottom	{
	padding-bottom: 5rem;
}

.padding-top {
	padding-top: 0.625rem;
}

.card-columns {
	column-gap: 24px;
}

.nudge-up-20 {
	margin-top: -20px;
}

@media (any-hover: hover) and (pointer: fine) {
	.read-more-icon {
		opacity: 0;
		-webkit-transition: all 100ms ease-in;
		-o-transition: all 100ms ease-in;
		transition: all 100ms ease-in;
	}	
}


.read-more-icon i {
	-webkit-transition: all 300ms ease-in;
	-o-transition: all 300ms ease-in;
	transition: all 300ms ease-in;
}

.navbar img {
	height: 1.25rem;
	width: auto;
}

.hero {
	text-align: center;

}

.hero img {
	height: calc(1.475rem + 2.7vw);
	width: auto;
}

.title-card {
	border-color: transparent;
	background-size: cover;
	border-left: none;
	border-right: none;
	border-top: none;
	border-bottom: none;
}


.color-overlay {
	background-color: rgba(32, 31, 47, 0.58);
	-webkit-transition: all 100ms ease-in;
	-o-transition: all 100ms ease-in;
	transition: all 100ms ease-in;
}

.color-overlay:hover {
  	background-color: rgba(32, 31, 47, 0.40)
}

.title-card:hover .read-more-icon {
	opacity: 1;
}

.title-card:hover .read-more-icon > i {
	transform: translateX(4px);
}

.title-card .card-title a:hover {
	text-decoration: none;
	color: var(--light);
}

.sign-up-box {
	padding-top: 47px;
	padding-bottom: 83px;
	padding-left: 15px;
	padding-right: 15px;
	border-radius: 5px;
	margin-left: auto;
	margin-right: auto;
}

.sign-up-box button {
	border-radius: 17.5px;

}

.sidenav {
	/*top: 5rem;*/
	border-radius: 0;
}

.article .fa-bookmark {
	/*visibility: hidden;*/
	color: #cbea86;
}

.article:hover .fa-bookmark {
	/*visibility: visible;*/
	color: var(--success);
}

.article .fa-bookmark:hover {
	font-weight: 900;
	color: var(--success);
}

.article[data-status="bookmarked"] .fa-bookmark {
	visibility: visible;
	font-weight: 900;
	color: var(--success);
}

.article.toggle-display[data-status="notBookmarked"] {
	display: none !important;
}

.feed-info.toggle-display[data-status="notSelected"] {
	display: none !important;
}



/* Extra small devices (portrait phones, less than 576px)
 * No media query for `xs` since this is the default in Bootstrap */

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
	body {
		padding-top: 83px;
	}

	nav {
		min-height: 83px;
	}

	nav .sign-up-btn {
		border-radius: 20px;
	}

	.sign-up-box {
		padding-top: 47px;
		padding-bottom: 83px;
		padding-left: 15px;
		padding-right: 15px;
		border-radius: 5px;
		margin-left: auto;
		margin-right: auto;
	}

	.card-columns {
		column-count: 1;
	}
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
	.hero {
		padding-bottom: 8rem;
	}

	.padding-top {
		padding-top: 1.875rem;
	}

	.padding-md-top {
		padding-top: 1.875rem;
	}

	.card-columns {
		column-count: 2;
	}

	.sidenav {
		position: -webkit-sticky;
  		position: sticky;
  		top: calc(83px + 1.5rem);
	}
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
	.card-columns {
		column-count: 3;
	}
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
	.card-columns {
		column-count: 3;
	}
}

